--- a/index.html
+++ b/index.html
@@ -178,9 +178,11 @@
                 <span class="linebreak-desktop">페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-2-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
-                  <source src="public/videoes/tabpanel1-section2.mp4" type="video/mp4">
-                </video>
+                <div style="position:relative">
+                  <video autoplay loop muted poster="public/videoes/tabpanel1-section2.png" preload="bbb" width="" preload="metadata" playsinline>
+                    <source src="public/videoes/tabpanel1-section2.mp4" type="video/mp4">
+                  </video>
+                </div>
               </figure>
             </div>
           </article>
