--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <a class="navbar-logo" href="https://mathflat.com/"><img src="public/images/signature_logo_colored.png" alt=""></a>
         <div class="navbar-menu" role="navigation">
           <a class="navbar-menu-item is-active" href="index.html">새로운 기능</a>
-          <a class="navbar-menu-item" href="">사용신청</a>
+          <a class="navbar-menu-item" href="apply.html">사용신청</a>
         </div>
       </nav>
       <div class="js-navbar-backdrop" style="height:var(--navbar-height);"></div>
@@ -159,7 +159,7 @@
                 <span class="linebreak-desktop">바로 원하는 단원과 유형을 선택할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-1-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
+                <video autoplay loop muted poster="public/videoes/tabpanel1-section1.png" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel1-section1.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -178,7 +178,7 @@
                 <span class="linebreak-desktop">페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-2-wrap">
-                <div style="position:relative">
+                <div class="tabpanel1-2-wrap-inner">
                   <video autoplay loop muted poster="public/videoes/tabpanel1-section2.png" preload="bbb" width="" preload="metadata" playsinline>
                     <source src="public/videoes/tabpanel1-section2.mp4" type="video/mp4">
                   </video>
@@ -456,7 +456,7 @@
                 <span class="linebreak-desktop">회차별 채점 기록도 삭제되지 않고 모두 저장되어 확인할 수 있어요. </span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-3-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
+                <video autoplay loop muted poster="public/videoes/tabpanel2-section3.png" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel2-section3.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -474,8 +474,8 @@
                 학생과 학습지를 매번 찾지 않고 
                 <span class="linebreak-desktop">한 반에 포함된 학생들의 오답 학습지를 편하게 만들어 보세요. </span>
               </p>
-              <figure class="home-tabpanel-section-media">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
+              <figure class="home-tabpanel-section-media tabpanel2-4-wrap">
+                <video autoplay loop muted poster="public/videoes/tabpanel2-section4.png" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel2-section4.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -547,7 +547,7 @@
                 <span class="linebreak-desktop">구분하면서 체크해보세요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel3-3-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
+                <video autoplay loop muted poster="public/videoes/tabpanel3-section3.png" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel3-section3.mp4" type="video/mp4">
                 </video>
               </figure>
@@ -675,7 +675,7 @@
                 <span class="linebreak-desktop">한눈에 쉽게 확인할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel4-5-wrap">
-                <video autoplay loop muted poster="" preload="bbb" width="" preload="metadata" playsinline>
+                <video autoplay loop muted poster="public/videoes/tabpanel4-section5.png" preload="bbb" width="" preload="metadata" playsinline>
                   <source src="public/videoes/tabpanel4-section5.mp4" type="video/mp4">
                 </video>
               </figure>
