--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           </div>
         <!-- </div> -->
       </nav>
-      <div class="js-navbar-backdrop"></div>
+      <div class="navbar-backdrop js-navbar-backdrop"></div>
   
       <section class="hero js-hero js-observer">
         <div class="hero-inner">
@@ -147,8 +147,8 @@
                 <span class="linebreak-desktop">단원과 유형을 <em>바로 고를 수</em> 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
-                이제 학습지와 교재를 만들 학교와 학년-학기를 고른 후 
-                <span class="linebreak-desktop">바로 원하는 단원과 유형을 선택할 수 있어요.</span>
+                이제 학습지와 교재를 만들 학교와 학년-학기를 고른 후<br />
+                바로 원하는 단원과 유형을 선택할 수 있어요.
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-1-wrap">
                 <video autoplay loop muted poster="public/videoes/tabpanel1-section1.png" preload="bbb" width="" preload="metadata" playsinline>
@@ -166,8 +166,8 @@
                 <span class="linebreak-desktop">페이지를 <em>더 빠르게 선택</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
-                원하는 페이지를 입력해서 빠르게 찾아보세요. 
-                <span class="linebreak-desktop">페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.</span>
+                원하는 페이지를 입력해서 빠르게 찾아보세요.<br />
+                페이지별 챕터를 보고 교재가 없어도 원하는 범위를 선택할 수 있어요.
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-2-wrap">
                 <div class="tabpanel1-2-wrap-inner">
@@ -280,8 +280,8 @@
                 <span class="linebreak-desktop"><em>유사문제 매칭률</em>이 더 높아졌어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
-                인공지능 기반 데이터 분석을 통해 유사문제 매칭률을 높였습니다.
-                <span class="linebreak-desktop">높아진 매칭률로 보다 정확한 오답 학습지를 만들어보세요.</span>
+                인공지능 기반 데이터 분석을 통해 유사문제 매칭률을 높였습니다.<br class="view-only-moblie" />
+                높아진 매칭률로 보다 정확한 오답 학습지를 만들어보세요.
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-1-wrap">
                 <img class="tabpanel2-1-1" src="public/images/tabpanel2-section1-1.png" alt="">
@@ -291,10 +291,11 @@
           </article>
     
           <!-- 2-2 -->
-          <article class="home-tabpanel-section align-half js-observer" style="background-color:var(--blue100);">
-            <div class="home-tabpanel-section-background">
+          <article class="home-tabpanel-section align-half js-observer" style="background-color:var(--blue100);background: url(public/images/tabpanel2-section3-bg.png) no-repeat center center;
+          background-size: cover;">
+            <!-- <div class="home-tabpanel-section-background">
               <img src="public/images/tabpanel2-section3-bg.png" alt="">
-            </div>
+            </div> -->
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
                 한 반의 학생들의 진도와 숙제를
@@ -523,8 +524,8 @@
                 <span class="linebreak-desktop">한눈에 볼 수 있고, 기록을 다운받을 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
-                학년별, 재원/퇴원 상태로 학생들을 구분하여 볼 수 있고
-                <span class="linebreak-desktop">정렬 기준을 바꾸거나 이름을 검색해서 원하는 학생을 더 빠르게 찾을 수 있어요.</span>
+                월간, 주간별로 학생들의 출결 기록을 바로 볼 수 있고,<br />
+                내역을 엑셀로 다운로드 받아 다양하게 활용할 수 있어요.
               </p>
               <figure class="home-tabpanel-section-media tabpanel3-2-wrap">
                 <img class="tabpanel3-2-1" src="public/images/tabpanel3-section2-1.png" alt="">
@@ -540,8 +541,8 @@
                 <span class="linebreak-desktop"><em>학원비를 한눈에 체크</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
-                학생별로 학원비를 기록할 수 있고, 기록한 내역을 월별로
-                <span class="linebreak-desktop">구분하면서 체크해보세요.</span>
+                학생별로 학원비를 기록할 수 있고, 기록한 내역을 월별로<br />
+                구분하면서 체크해보세요.
               </p>
               <figure class="home-tabpanel-section-media tabpanel3-3-wrap">
                 <video autoplay loop muted poster="public/videoes/tabpanel3-section3.png" preload="bbb" width="" preload="metadata" playsinline>
