--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
           <article class="home-tabpanel-section align-centered js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                단원・유형 학습지를 만들 때
-                <span class="linebreak-desktop">단원과 유형을 <em>바로 고를 수</em> 있어요.</span>
+                단원・유형 학습지를 만들 때<br />
+                단원과 유형을 <em>바로 고를 수</em> 있어요.
               </h1>
               <p class="home-tabpanel-section-description">
                 이제 학습지와 교재를 만들 학교와 학년-학기를 고른 후<br />
@@ -163,7 +163,7 @@
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
                 시중교재 학습지를 만들 때
-                <span class="linebreak-desktop">페이지를 <em>더 빠르게 선택</em>할 수 있어요.</span>
+                <span class="linebreak-desktop">페이지를 <br class="view-only-moblie" /><em>더 빠르게 선택</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
                 원하는 페이지를 입력해서 빠르게 찾아보세요.<br />
@@ -199,8 +199,8 @@
             </div> -->
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                수능/모의고사 학습지를 만들 때
-                <span class="linebreak-desktop">문제를 <em>시험 또는 단원별로 선택</em>할 수 있어요.</span>
+                수능/모의고사 학습지를 만들 때<br class="view-only-moblie" />
+                <span class="linebreak-desktop">문제를 <em>시험 또는 단원별로 <br class="view-only-moblie" />선택</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
                 이제 시험별로 킬러 문제를 골라 학습지를 만들어 보세요.
@@ -216,8 +216,8 @@
           <article class="home-tabpanel-section align-half background js-observer" style="background-color:var(--gray900);">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                마음에 드는 문제를
-                <span class="linebreak-desktop"><em>즐겨 찾는 문제</em>로 저장할 수 있어요.</span>
+                마음에 드는 문제를<br />
+                <em>즐겨 찾는 문제</em>로 저장할 수 있어요.
               </h1>
               <p class="home-tabpanel-section-description">
                 이제 즐겨 찾기 버튼을 눌러 3초 만에 저장해보세요. 즐겨 찾는 문제들로 학습지를
@@ -276,8 +276,8 @@
           <article class="home-tabpanel-section align-half js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                오답 학습지를 만들 때
-                <span class="linebreak-desktop"><em>유사문제 매칭률</em>이 더 높아졌어요.</span>
+                오답 학습지를 만들 때<br />
+                <em>유사문제 매칭률</em>이 더 높아졌어요.
               </h1>
               <p class="home-tabpanel-section-description">
                 인공지능 기반 데이터 분석을 통해 유사문제 매칭률을 높였습니다.<br class="view-only-moblie" />
@@ -298,8 +298,8 @@
             </div> -->
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                한 반의 학생들의 진도와 숙제를
-                <span class="linebreak-desktop">한눈에 <em>비교하면서 파악</em>할 수 있어요.</span>
+                한 반의 학생들의 진도와<br class="view-only-moblie" /> 숙제를
+                <span class="linebreak-desktop">한눈에 <em>비교하면서 <br class="view-only-moblie" />파악</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
                 어떤 학생이 숙제를 했고, 어떤 학생이 하지 않았는지 한눈에 파악해보세요.
@@ -441,8 +441,8 @@
           <article class="home-tabpanel-section align-centered js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                채점 기록을 삭제하지 않아도 한 번
-                <span class="linebreak-desktop"><em>풀었던 교재를 다시 출제</em>할 수 있어요.</span>
+                채점 기록을 삭제하지 않아도<br class="view-only-moblie" /> 한 번
+                <span class="linebreak-desktop"><em>풀었던 교재를<br class="view-only-moblie" /> 다시 출제</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
                 학생이 교재를 한 번 더 풀게 하고 싶을 때 교재 재출제 기능을 사용해보세요.
@@ -460,7 +460,7 @@
           <article class="home-tabpanel-section align-centered js-observer" style="background-color:var(--blue100);">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                같은 반 학생의 <span class="linebreak-mobile"><em>오답 관리 학습지</em>를</span> 
+                같은 반 학생의<br class="view-only-moblie" /> <em>오답 관리 학습지</em>를<br class="view-only-moblie" />
                 <span class="linebreak-desktop">더 빠르게 만들 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
@@ -481,9 +481,9 @@
 
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                같은 반 또는 학년 학생들의
-                <span class="linebreak-desktop"><em>원클릭 보고서</em>를 한 번에 만들 수 있고,</span>
-                <em>등수와 평균을 추가</em>할 수 있어요.
+                같은 반 또는 학년 학생들의<br class="view-only-moblie" />
+                <span class="linebreak-desktop"><em>원클릭 보고서</em>를 한 번에 <br class="view-only-moblie" />만들 수 있고,</span>
+                <em>등수와 평균을<br class="view-only-moblie" /> 추가</em>할 수 있어요.
               </h1>
               <p class="home-tabpanel-section-description">
                 같은 반 또는 학년 학생들의 원클릭 보고서를 한 번에 만들어 보세요.
@@ -504,7 +504,7 @@
           <article class="home-tabpanel-section align-centered js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                학생 정렬 기준을 바꾸거나 <em>이름을 검색해서</em>
+                학생 정렬 기준을 바꾸거나 <br class="view-only-moblie" /><em>이름을 검색해서</em><br class="view-only-moblie" />
                 <span class="linebreak-desktop"><em>학생을 더 빠르게</em> 찾을 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
@@ -520,8 +520,8 @@
           <article class="home-tabpanel-section align-centered bg-dotted js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                학생들의 출결 기록을 <em>월간,주간별</em>로
-                <span class="linebreak-desktop">한눈에 볼 수 있고, 기록을 다운받을 수 있어요.</span>
+                학생들의 출결 기록을 <br class="view-only-moblie" /><em>월간,주간별</em>로
+                <span class="linebreak-desktop">한눈에 볼 수 있고, <br class="view-only-moblie" />기록을 다운받을 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
                 월간, 주간별로 학생들의 출결 기록을 바로 볼 수 있고,<br />
@@ -537,8 +537,8 @@
           <article class="home-tabpanel-section align-half js-observer" style="background-color:var(--blue100);">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                학생별로 학원비를 기록하고, 월별로
-                <span class="linebreak-desktop"><em>학원비를 한눈에 체크</em>할 수 있어요.</span>
+                학생별로 학원비를 기록할 수 있고, <br class="view-only-moblie" />월별로
+                <span class="linebreak-desktop"><em>학원비를 <br class="view-only-moblie" />한눈에 체크</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
                 학생별로 학원비를 기록할 수 있고, 기록한 내역을 월별로<br />
@@ -558,8 +558,8 @@
             </div>
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                엑셀 파일을 첨부하여 학원의
-                <span class="linebreak-desktop">모든 <em>학생을 한 번에 등록</em>할 수 있어요.</span>
+                엑셀 파일을 첨부하여 <br class="view-only-moblie" />학원의
+                <span class="linebreak-desktop">모든 <em>학생을 <br class="view-only-moblie" />한 번에 등록</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
                 엑셀 양식을 다운받아서 학생들의 필수 정보를 입력하고,
@@ -579,8 +579,8 @@
           <article class="home-tabpanel-section align-half js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                학생・학부모앱에 아이디로 로그인하고, 
-                <span class="linebreak-desktop"><em>아이디는 문자로 바로 전송</em>할 수 있어요. </span>
+                학생・학부모앱에 아이디로 <br class="view-only-moblie" />로그인하고, 
+                <span class="linebreak-desktop"><em>아이디는 문자로 <br class="view-only-moblie" />바로 전송</em>할 수 있어요. </span>
               </h1>
               <p class="home-tabpanel-section-description">
                 이제 등록된 학생에게 자동으로 아이디가 발급되어요. 
@@ -604,8 +604,8 @@
           <article class="home-tabpanel-section align-centered js-observer" style="background-color:#F8FCFF;">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                이제 학생앱에서
-                <span class="linebreak-desktop"><em>교재 정답도 비공개</em>할 수 있어요.</span>
+                이제 학생앱에서<br />
+                <em>교재 정답도 비공개</em>할 수 있어요.
               </h1>
               <p class="home-tabpanel-section-description">
                 시중 교재와 자체 교재 모두 학습지처럼 정답을 비공개할 수 있습니다. 
@@ -629,7 +629,7 @@
           <article class="home-tabpanel-section align-half js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                한 문제씩 넘기면서 집중해서 풀 수 있고
+                한 문제씩 넘기면서 <br class="view-only-moblie" />집중해서 풀 수 있고<br class="view-only-moblie" />
                 <span class="linebreak-desktop"><em>모르는 문제를 체크</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
@@ -646,8 +646,8 @@
           <article class="home-tabpanel-section align-centered js-observer" style="background-color:#fafafa;">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                <em>깔끔해진 숙제 리스트</em>로
-                <span class="linebreak-desktop">숙제를 놓치지 않을 수 있어요.</span>
+                <em>깔끔해진 숙제 리스트</em>로<br />
+                숙제를 놓치지 않을 수 있어요.
               </h1>
               <p class="home-tabpanel-section-description">
                 최근 일주일간의 숙제를 보여주어 학생들이 놓치지 않고 숙제를 체크할 수 있어요.
@@ -665,8 +665,8 @@
           <article class="tabpanel-section align-half js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
-                학생과 학부모가 학생의 <em>학습 성과를</em>
-                <span class="linebreak-desktop"><em>직접 확인</em>할 수 있어요.</span>
+                학생과 학부모가 학생의 <em>학습 성과를</em><br />
+                <em>직접 확인</em>할 수 있어요.
               </h1>
               <p class="home-tabpanel-section-description">
                 학부모앱과 학생앱에서 학생의 최근 4주간의 학습 성과를 그래프로
