--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
                 <span class="linebreak-desktop">문제를 <em>시험 또는 단원별로 <br class="view-only-moblie" />선택</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
-                이제 시험별로 킬러 문제를 골라 학습지를 만들어 보세요.
-                <span class="linebreak-desktop">시험에서 기하, 미적분 등 원하는 단원의 문제만 골라 학습지를 만들어보세요.</span>
+                이제 시험별로 킬러 문제를 골라 학습지를 만들어 보세요.<br class="view-only-moblie" />
+                <span class="linebreak-desktop">시험에서 기하, 미적분 등 필요한 <br class="view-only-moblie" />단원의 문제만 골라 학습지를 만들어보세요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel1-3-wrap">
                 <img src="public/images/tabpanel1-section3-1.png" alt="">
@@ -302,8 +302,8 @@
                 <span class="linebreak-desktop">한눈에 <em>비교하면서 <br class="view-only-moblie" />파악</em>할 수 있어요.</span>
               </h1>
               <p class="home-tabpanel-section-description">
-                어떤 학생이 숙제를 했고, 어떤 학생이 하지 않았는지 한눈에 파악해보세요.
-                <span class="linebreak-desktop">학생별로 학습지나 교재를 얼마나 풀었고, 맞았는지 한눈에 확인할 수 있어요.</span>
+                어떤 학생이 숙제를 했고, 어떤 학생이 하지 않았는지 <br class="view-only-moblie" />한눈에 파악해보세요.
+                <span class="linebreak-desktop">학생별로 학습지나 교재를 얼마나 풀었고, <br class="view-only-moblie" />맞았는지 한눈에 확인할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-2-wrap">
                 <div class="tag1">
@@ -465,7 +465,7 @@
               </h1>
               <p class="home-tabpanel-section-description">
                 학생과 학습지를 매번 찾지 않고 
-                <span class="linebreak-desktop">한 반에 포함된 학생들의 오답 학습지를 편하게 만들어 보세요. </span>
+                <span class="linebreak-desktop">한 반에 포함된 <br class="view-only-moblie" />학생들의 오답 학습지를 편하게 만들어 보세요. </span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-4-wrap">
                 <video autoplay loop muted poster="public/videoes/tabpanel2-section4.png" preload="bbb" width="" preload="metadata" playsinline>
@@ -486,8 +486,8 @@
                 <em>등수와 평균을<br class="view-only-moblie" /> 추가</em>할 수 있어요.
               </h1>
               <p class="home-tabpanel-section-description">
-                같은 반 또는 학년 학생들의 원클릭 보고서를 한 번에 만들어 보세요.
-                <span class="linebreak-desktop">학습지로 시험을 본 후에 학생들의 등수와 평균을 원클릭 보고서로 뽑아보세요. </span>
+                같은 반 또는 학년 학생들의 원클릭 보고서를 <br class="view-only-moblie" />한 번에 만들어 보세요.
+                <span class="linebreak-desktop">학습지로 시험을 본 후에 학생들의 <br class="view-only-moblie" />등수와 평균을 원클릭 보고서로 뽑아보세요. </span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-5-wrap">
                 <img class="tabpanel2-5-1" src="public/images/tabpanel2-section5-1.png" alt="">
@@ -634,7 +634,7 @@
               </h1>
               <p class="home-tabpanel-section-description">
                 실제 학습지를 푸는 것처럼 한 문제씩 집중해서 문제를 풀 수 있고, 모르는 문제로 
-                체크한 문제는 선생님 화면에서 확인할 수 있어요.
+                <span class="linebreak-desktop">체크한 문제는 선생님 화면에서 확인할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel4-3-wrap">
                 <img class="tabpanel4-3-1" src="public/images/tabpanel4-section3-1.png" alt="">
