--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </article>
     
           <!-- 1-2 -->
-          <article class="home-tabpanel-section align-half bg-dotted js-observer">
+          <article class="home-tabpanel-section align-half js-observer">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
                 시중교재 학습지를 만들 때
