--- a/apply.html
+++ b/apply.html
@@ -52,7 +52,15 @@
     <script type="module" src="public/javascripts/index.js"></script>
   </head>
   <body>
-    <header class="apply-head">ggg</header>
-    <main class="apply-main"></main>
+    <header class="apply-head">
+      <div class="apply-head-inner">
+
+      </div>
+    </header>
+    <main class="apply-main">
+      <section>
+        <div></div>
+      </section>
+    </main>
   </body>
 </html>
