--- a/apply.html
+++ b/apply.html
@@ -9,7 +9,7 @@
     <meta name="robots" content="noindex" />
     <meta name="theme-color" content="rgba(255,255,255,.8)" />
 
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-stylnpe" content="black-translucent" />
     <meta name="mobile-web-app-capable" content="yes" />
 
@@ -27,8 +27,8 @@
     <meta property="og:url" content="" />
     <meta property="og:title" content="수줍이의 포트폴리오" />
     <meta property="og:image" content="/images/open-graph.png" />
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
     <meta property="og:description" content="부끄러우니까 보지마요." />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@" />
@@ -36,12 +36,13 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:title" content="수줍이의 포트폴리오" />
     <meta name="twitter:description" content="부끄러우니까 보지마요." />
-    <meta name="twitter:image" content="https://example.com/image.jpg">
+    <meta name="twitter:image" content="https://example.com/image.jpg" />
 
     <link rel="canonical" href="https://soojubm.github.io/" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="192x192" href="/favicon.png" />
-    <link rel="apple-touch-icon" href="" /> <!-- 200x200 -->
+    <link rel="apple-touch-icon" href="" />
+    <!-- 200x200 -->
 
     <meta name="format-detection" content="telephone=no" />
     <meta name="format-detection" content="date=no" />
@@ -49,18 +50,135 @@
     <meta name="format-detection" content="email=no" />
 
     <link rel="stylesheet" type="text/css" href="public/stylesheets/style.css" />
+    <link rel="stylesheet" type="text/css" href="public/stylesheets/pages/apply.css" />
     <script type="module" src="public/javascripts/index.js"></script>
   </head>
   <body>
+    <style></style>
     <header class="apply-head">
-      <div class="apply-head-inner">
-
-      </div>
+      <div class="apply-head-inner"></div>
     </header>
     <main class="apply-main">
-      <section>
-        <div></div>
+      <div class="apply-bgarea">
+        <section class="apply-hero">
+          <h1><img src="public/images/apply/apply-title.png" alt="" /></h1>
+          <figure>
+            <img src="public/images/apply/apply-image.png" alt="" />
+          </figure>
+          <footer>
+            <a class="apply-hero-cta js-hero-cta" href="">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
+          </footer>
+        </section>
+
+        <section class="apply-intro js-observer">
+          <div class="apply-intro-inner">
+            <header>
+              <span><img src="public/images/apply/number1.png" alt="" /></span>
+              <h2>사전 예약 안내</h2>
+            </header>
+            <div>
+              <span><img src="public/images/apply/intro1.png" alt="" /></span>
+              <h3>예약 기간</h3>
+              <p>5월 31일 ~ 6월 25일 오후 4시</p>
+            </div>
+            <div>
+              <span><img src="public/images/apply/intro2.png" alt="" /></span>
+              <h3>예약 대상</h3>
+              <p>정식 가입한 학원</p>
+            </div>
+            <div>
+              <span><img src="public/images/apply/intro3.png" alt="" /></span>
+              <h3>사용 시작일</h3>
+              <p>7월 1일 목요일</p>
+            </div>
+          </div>
+        </section>
+
+        <section class="apply-benefit js-observer">
+          <div class="apply-benefit-inner">
+            <header>
+              <span><img src="public/images/apply/number2.png" alt="" /></span>
+              <h2>
+                사전 예약한 <br class="view-only-moblie" /><em>선착순 100명</em>에게 <br class="view-only-moblie" />새로운 매쓰플랫 <br class="view-only-moblie" /><span class="linebreak-desktop"><em>1개월 무료 이용권</em>을 드립니다</span>
+              </h2>
+            </header>
+            <figure>
+              <img src="public/images/apply/benefit.png" alt="" />
+            </figure>
+            <div class="coins">
+              <img src="public/images/apply/benefit-coin1.png" alt="" />
+              <img src="public/images/apply/benefit-coin2.png" alt="" />
+              <img src="public/images/apply/benefit-coin3.png" alt="" />
+              <img src="public/images/apply/benefit-coin4.png" alt="" />
+              <img src="public/images/apply/benefit-coin5.png" alt="" />
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <section class="apply-how js-observer">
+        <div class="apply-how-inner">
+          <header>
+            <span><img src="public/images/apply/number3.png" alt="" /></span>
+            <h2>사전 예약 방법</h2>
+            <p>
+              사전 예약 기간
+              <br />
+              <em>2021.05.31(월) ~ 06.25(금) 오후 4시</em>
+            </p>
+          </header>
+          <div>
+            <div class="bg"></div>
+            <span><img src="public/images/apply/how1.png" alt="" /></span>
+            <em>STEP 1</em>
+            <h3>사전 예약하기</h3>
+            <p>
+              신청하기 버튼을 눌러<br />
+              신청서를 작성해 주세요.
+            </p>
+          </div>
+          <div>
+            <div class="bg"></div>
+            <span><img src="public/images/apply/how2.png" alt="" /></span>
+            <em>STEP 2</em>
+            <h3>6월 30일 데이터 이전</h3>
+            <p>
+              6월 30일 자정부터 데이터 이전 작업이 진행되고,<br />
+              그동안 매쓰플랫 사용이 불가능합니다.
+            </p>
+          </div>
+          <div>
+            <div class="bg"></div>
+            <span><img src="public/images/apply/how3.png" alt="" /></span>
+            <em>STEP 3</em>
+            <h3>7월 1일 사용 시작</h3>
+            <p>
+              데이터 이전 완료 후 연락을 드립니다.<br />
+              설치된 새로운 매쓰플랫을 바로 사용해보세요.
+            </p>
+          </div>
+        </div>
       </section>
+
+      <footer class="apply-notice js-observer">
+        <div class="apply-notice-inner">
+          <header>
+            <img src="public/images/apply/notice-title-icon.svg" alt="" />
+            <h2>꼭! 알아두세요</h2>
+          </header>
+          <hr />
+          <ul>
+            <li>사전 예약 신청서가 제출되면 고객 센터에서 확인 전화를 드립니다.</li>
+            <li>사전 예약 취소는 6월 29일 오후 6시까지 고객 센터 연락을 통해 가능합니다.</li>
+            <li>사전 예약 취소 시 1개월 무료 혜택을 받으실 수 없습니다.</li>
+            <li>새로운 매쓰플랫을 사용하기 위해서 데이터 이전 작업이 필요합니다.</li>
+            <li>학습지, 교재, 채점 기록, 보고서 등 기존 매쓰플랫에 저장된 데이터를 새로운 매쓰플랫으로 이전됩니다.</li>
+            <li>데이터를 이전 하는 동안 서비스를 이용할 수 없습니다.</li>
+            <li>데이터 이전 완료 후 안내 연락을 드리고, 새로운 매쓰플랫을 설치 후 사용하실 수 있습니다.</li>
+            <li>데이터 이전이 완료된 후에는 기존 매쓰플랫을 사용할 수 없습니다.</li>
+          </ul>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
