--- a/apply.html
+++ b/apply.html
@@ -127,35 +127,37 @@
               <em>2021.05.31(월) ~ 06.25(금) 오후 4시</em>
             </p>
           </header>
-          <div>
-            <div class="bg"></div>
-            <span><img src="public/images/apply/how1.png" alt="" /></span>
-            <em>STEP 1</em>
-            <h3>사전 예약하기</h3>
-            <p>
-              신청하기 버튼을 눌러<br />
-              신청서를 작성해 주세요.
-            </p>
-          </div>
-          <div>
-            <div class="bg"></div>
-            <span><img src="public/images/apply/how2.png" alt="" /></span>
-            <em>STEP 2</em>
-            <h3>6월 30일 데이터 이전</h3>
-            <p>
-              6월 30일 자정부터 데이터 이전 작업이 진행되고,<br />
-              그동안 매쓰플랫 사용이 불가능합니다.
-            </p>
-          </div>
-          <div>
-            <div class="bg"></div>
-            <span><img src="public/images/apply/how3.png" alt="" /></span>
-            <em>STEP 3</em>
-            <h3>7월 1일 사용 시작</h3>
-            <p>
-              데이터 이전 완료 후 연락을 드립니다.<br />
-              설치된 새로운 매쓰플랫을 바로 사용해보세요.
-            </p>
+          <div class="wrap">
+            <div>
+              <div class="bg"></div>
+              <span><img src="public/images/apply/how1.png" alt="" /></span>
+              <em>STEP 1</em>
+              <h3>사전 예약하기</h3>
+              <p>
+                신청하기 버튼을 눌러<br />
+                신청서를 작성해 주세요.
+              </p>
+            </div>
+            <div>
+              <div class="bg"></div>
+              <span><img src="public/images/apply/how2.png" alt="" /></span>
+              <em>STEP 2</em>
+              <h3>6월 30일 데이터 이전</h3>
+              <p>
+                6월 30일 자정부터 데이터 이전 작업이 진행되고,<br />
+                그동안 매쓰플랫 사용이 불가능합니다.
+              </p>
+            </div>
+            <div>
+              <div class="bg"></div>
+              <span><img src="public/images/apply/how3.png" alt="" /></span>
+              <em>STEP 3</em>
+              <h3>7월 1일 사용 시작</h3>
+              <p>
+                데이터 이전 완료 후 연락을 드립니다.<br />
+                설치된 새로운 매쓰플랫을 바로 사용해보세요.
+              </p>
+            </div>
           </div>
         </div>
       </section>
