--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
           </article>
 
           <!-- 2-2 -->
-          <article class="home-tabpanel-section align-half js-observer" style="background-color: var(--blue100); background: url(public/images/tabpanel2-section3-bg.png) no-repeat center center; background-size: cover">
+          <article class="home-tabpanel-section align-half js-observer js-counter" style="background-color: var(--blue100); background: url(public/images/tabpanel2-section3-bg.png) no-repeat center center; background-size: cover">
             <!-- <div class="home-tabpanel-section-background">
               <img src="public/images/tabpanel2-section3-bg.png" alt="">
             </div> -->
@@ -322,7 +322,7 @@
                           </text>
                         </g>
                       </svg>
-                      <span class="js-counter" data-number="69">69%</span>
+                      <span class="counter js-counter1" data-number="69">69%</span>
                     </div>
                   </div>
                   <div class="user2">
@@ -341,7 +341,7 @@
                           </text>
                         </g>
                       </svg>
-                      <span class="js-counter" data-number="22" style="color: var(--red400)">22%</span>
+                      <span class="counter js-counter2" data-number="22" style="color: var(--red400)">22%</span>
                     </div>
                   </div>
                   <div class="user3">
@@ -360,7 +360,7 @@
                           </text>
                         </g>
                       </svg>
-                      <span class="js-counter" data-number="78">78%</span>
+                      <span class="counter js-counter3" data-number="78">78%</span>
                     </div>
                   </div>
                   <div class="user4">
@@ -379,7 +379,7 @@
                           </text>
                         </g>
                       </svg>
-                      <span class="js-counter" data-number="47">47%</span>
+                      <span class="counter js-counter4" data-number="47">47%</span>
                     </div>
                   </div>
                   <div class="user5">
@@ -398,7 +398,7 @@
                           </text>
                         </g>
                       </svg>
-                      <span class="js-counter" data-number="70">70%</span>
+                      <span class="counter js-counter5" data-number="70">70%</span>
                     </div>
                   </div>
                   <div class="user6">
@@ -417,7 +417,7 @@
                           </text>
                         </g>
                       </svg>
-                      <span class="js-counter">85%</span>
+                      <span class="counter js-counter6" data-number="85">85%</span>
                     </div>
                   </div>
                 </div>
