--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </section>
 
         <nav class="home-tablist js-home-tablist" role="tablist">
-          <div class="home-tablist-inner">
+          <div class="home-tablist-inner js-home-tablist-inner">
             <a class="home-tablist-tab" href="#tab1" role="tab" aria-selected="true" data-index="1">
               <small>새로운 기능 1.</small>
               <b>수업 전 학습 자료 준비</b>
