--- a/index.html
+++ b/index.html
@@ -317,12 +317,12 @@
                           <text y="40%">
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
-                          <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>
+                          <text y="64%" class="donut-percent-wrap">
+                            <tspan class="donut-percent js-counter1" x="50%" text-anchor="middle" data-number="69"></tspan>
                           </text>
                         </g>
                       </svg>
-                      <span class="counter js-counter1" data-number="69">69%</span>
+                      <!-- <span class="counter">69%</span> -->
                     </div>
                   </div>
                   <div class="user2">
@@ -336,12 +336,12 @@
                           <text y="40%">
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
-                          <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>
+                          <text y="64%" class="donut-percent-wrap">
+                            <tspan class="donut-percent js-counter2" x="50%" text-anchor="middle" data-number="22"></tspan>
                           </text>
                         </g>
                       </svg>
-                      <span class="counter js-counter2" data-number="22" style="color: var(--red400)">22%</span>
+                      <!-- <span class="counter js-counter2" data-number="22" style="color: var(--red400)">22%</span> -->
                     </div>
                   </div>
                   <div class="user3">
@@ -355,12 +355,12 @@
                           <text y="40%">
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
-                          <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>
+                          <text y="64%" class="donut-percent-wrap">
+                            <tspan class="donut-percent js-counter3" x="50%" text-anchor="middle" data-number="78"></tspan>
                           </text>
                         </g>
                       </svg>
-                      <span class="counter js-counter3" data-number="78">78%</span>
+                      <!-- <span class="counter js-counter3" data-number="78">78%</span> -->
                     </div>
                   </div>
                   <div class="user4">
@@ -374,12 +374,12 @@
                           <text y="40%">
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
-                          <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>
+                          <text y="64%" class="donut-percent-wrap">
+                            <tspan class="donut-percent js-counter4" x="50%" text-anchor="middle" data-number="47"></tspan>
                           </text>
                         </g>
                       </svg>
-                      <span class="counter js-counter4" data-number="47">47%</span>
+                      <!-- <span class="counter js-counter4" data-number="47">47%</span> -->
                     </div>
                   </div>
                   <div class="user5">
@@ -393,12 +393,12 @@
                           <text y="40%">
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
-                          <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>
+                          <text y="64%" class="donut-percent-wrap">
+                            <tspan class="donut-percent js-counter5" x="50%" text-anchor="middle" data-number="70"></tspan>
                           </text>
                         </g>
                       </svg>
-                      <span class="counter js-counter5" data-number="70">70%</span>
+                      <!-- <span class="counter js-counter5" data-number="70">70%</span> -->
                     </div>
                   </div>
                   <div class="user6">
@@ -412,12 +412,12 @@
                           <text y="40%">
                             <tspan class="donut-data" x="50%" text-anchor="middle">정답률</tspan>
                           </text>
-                          <text y="64%">
-                            <tspan class="donut-percent" x="50%" text-anchor="middle"></tspan>
+                          <text y="64%" class="donut-percent-wrap">
+                            <tspan class="donut-percent js-counter6" x="50%" text-anchor="middle" data-number="85"></tspan>
                           </text>
                         </g>
                       </svg>
-                      <span class="counter js-counter6" data-number="85">85%</span>
+                      <!-- <span class="counter js-counter6" data-number="85">85%</span> -->
                     </div>
                   </div>
                 </div>
