--- a/index.html
+++ b/index.html
@@ -303,11 +303,11 @@
               </p>
               <figure class="home-tabpanel-section-media tabpanel2-2-wrap">
                 <div class="tag1">
-                  <img src="public/images/tabpanel2-section2-tag1.png" alt="" />
+                  <img class="drop-shadow" src="public/images/tabpanel2-section2-tag1.png" alt="" />
                 </div>
                 <div class="users">
                   <div class="user1">
-                    <img src="public/images/tabpanel2-section2-user1.png" alt="" />
+                    <img class="drop-shadow" src="public/images/tabpanel2-section2-user1.png" alt="" />
                     <div class="donut-wrap">
                       <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
                         <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
@@ -326,7 +326,7 @@
                     </div>
                   </div>
                   <div class="user2">
-                    <img src="public/images/tabpanel2-section2-user2.png" alt="" />
+                    <img class="drop-shadow" src="public/images/tabpanel2-section2-user2.png" alt="" />
                     <div class="donut-wrap">
                       <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
                         <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
@@ -345,7 +345,7 @@
                     </div>
                   </div>
                   <div class="user3">
-                    <img src="public/images/tabpanel2-section2-user3.png" alt="" />
+                    <img class="drop-shadow" src="public/images/tabpanel2-section2-user3.png" alt="" />
                     <div class="donut-wrap">
                       <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
                         <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
@@ -364,7 +364,7 @@
                     </div>
                   </div>
                   <div class="user4">
-                    <img src="public/images/tabpanel2-section2-user4.png" alt="" />
+                    <img class="drop-shadow" src="public/images/tabpanel2-section2-user4.png" alt="" />
                     <div class="donut-wrap">
                       <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
                         <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
@@ -383,7 +383,7 @@
                     </div>
                   </div>
                   <div class="user5">
-                    <img src="public/images/tabpanel2-section2-user5.png" alt="" />
+                    <img class="drop-shadow" src="public/images/tabpanel2-section2-user5.png" alt="" />
                     <div class="donut-wrap">
                       <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
                         <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
@@ -402,7 +402,7 @@
                     </div>
                   </div>
                   <div class="user6">
-                    <img src="public/images/tabpanel2-section2-user6.png" alt="" />
+                    <img class="drop-shadow" src="public/images/tabpanel2-section2-user6.png" alt="" />
                     <div class="donut-wrap">
                       <svg class="donut" width="100%" height="100%" viewBox="0 0 40 40">
                         <circle class="donut-ring" cx="20" cy="20" r="15" fill="transparent" stroke-width="3"></circle>
@@ -422,10 +422,10 @@
                   </div>
                 </div>
                 <div class="tag2">
-                  <img src="public/images/tabpanel2-section2-tag2.png" alt="" />
+                  <img class="drop-shadow" src="public/images/tabpanel2-section2-tag2.png" alt="" />
                 </div>
                 <div class="confirm">
-                  <img src="public/images/tabpanel2-section2-confirm.png" alt="" />
+                  <img class="drop-shadow" src="public/images/tabpanel2-section2-confirm.png" alt="" />
                 </div>
               </figure>
             </div>
@@ -627,8 +627,8 @@
                   <img src="public/images/tabpanel4-section2-2.png" alt="">
                 </figure> -->
                 <picture>
-                  <source media="(max-width: 1024px)" srcset="public/images/tabpanel4-section2-1-mobile.png" />
-                  <img src="public/images/tabpanel4-section2-1.png" alt="" />
+                  <source class="drop-shadow" media="(max-width: 1024px)" srcset="public/images/tabpanel4-section2-1-mobile.png" />
+                  <img class="drop-shadow" src="public/images/tabpanel4-section2-1.png" alt="" />
                 </picture>
               </figure>
             </div>
@@ -645,7 +645,7 @@
                 <span class="linebreak-desktop">체크한 문제는 선생님 화면에서 확인할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel4-3-wrap">
-                <img class="tabpanel4-3-1" src="public/images/tabpanel4-section3-1.png" alt="" />
+                <img class="tabpanel4-3-1 drop-shadow" src="public/images/tabpanel4-section3-1.png" alt="" />
               </figure>
             </div>
           </article>
