--- a/index.html
+++ b/index.html
@@ -177,22 +177,24 @@
 
           <!-- 1-3 -->
           <article class="home-tabpanel-section align-centered background js-observer" style="background-color: var(--navy)">
-            <!-- <div class="home-tabpanel-section-background tabpanel1-3-background">
-              <img src="public/images/tabpanel1-section3-bg.png" alt="">
-              
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-              <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="">
-            </div> -->
+            <div class="home-tabpanel-section-background tabpanel1-3-background">
+              <img src="public/images/tabpanel1-section3-bg.png" alt="" />
+
+              <div style="width: 100%; height: 100%; position: relative">
+                <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
+                <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
+                <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
+                <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
+                <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
+                <img class="tabpanel1-3-o" src="public/images/tabpanel1-section3-o.png" alt="" />
+                <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
+                <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
+                <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
+                <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
+                <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
+                <img class="tabpanel1-3-x" src="public/images/tabpanel1-section3-x.png" alt="" />
+              </div>
+            </div>
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
                 수능/모의고사 학습지를 만들 때<br class="view-only-moblie" />
@@ -604,7 +606,7 @@
                   <img src="public/images/tabpanel4-section1-2.png" alt="" />
                 </picture>
 
-                <img class="tabpanel4-1-3" src="public/images/tabpanel4-section1-3.png" alt="" />
+                <img class="tabpanel4-1-3 drop-shadow" src="public/images/tabpanel4-section1-3.png" alt="" />
               </figure>
             </div>
           </article>
