--- a/apply.html
+++ b/apply.html
@@ -81,11 +81,13 @@
               <h3>예약 기간</h3>
               <p>5월 31일 ~ 6월 25일 오후 4시</p>
             </div>
+            <span class="line view-only-moblie"></span>
             <div>
               <span><img src="public/images/apply/intro2.png" alt="" /></span>
               <h3>예약 대상</h3>
               <p>정식 가입한 학원</p>
             </div>
+            <span class="line view-only-moblie"></span>
             <div>
               <span><img src="public/images/apply/intro3.png" alt="" /></span>
               <h3>사용 시작일</h3>
