--- a/apply.html
+++ b/apply.html
@@ -59,6 +59,10 @@
       <div class="apply-head-inner"></div>
     </header>
     <main class="apply-main">
+      <section class="home-cta js-home-cta">
+        <a class="home-cta-button" href="#">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
+      </section>
+
       <div class="apply-bgarea">
         <section class="apply-hero">
           <h1><img src="public/images/apply/apply-title.png" alt="" /></h1>
