--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             매쓰플랫팀이 선생님들의 의견들을 모아 매쓰플랫을 개선하였어요.
             <span class="linebreak-desktop">가장 먼저 새로운 매쓰플랫을 사용하실 학원을 모집합니다!</span>
           </p>
-          <a class="hero-cta js-hero-cta" href="">신청 방법 보러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
+          <a class="hero-cta js-hero-cta" href="apply.html">신청 방법 보러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
           <div class="hero-object-group">
             <div class="hero-object-group-inner">
               <figure class="hero-object1"><img src="public/images/hero-object1.png" alt="" /></figure>
@@ -108,7 +108,7 @@
 
       <main class="js-tab">
         <section class="home-cta js-home-cta">
-          <a class="home-cta-button" href="">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
+          <a class="home-cta-button" href="apply.html">지금 바로 신청하러 가기 <img class="cta-arrow" src="public/icons/cta-arrow.svg" alt="" /></a>
         </section>
 
         <nav class="home-tablist js-home-tablist" role="tablist">
