--- a/index.html
+++ b/index.html
@@ -262,9 +262,7 @@
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">추가</h1>
               <p class="home-tabpanel-section-description">추가</p>
-              <figure class="home-tabpanel-section-media tabpanel2-0-wrap">
-                <img class="tabpanel2-0-1" src="public/images/tabpanel2-section1-1.png" alt="" />
-              </figure>
+              <figure class="home-tabpanel-section-media tabpanel2-0-wrap"></figure>
             </div>
           </article>
 
@@ -481,7 +479,6 @@
           <!-- 2-5 -->
           <article class="home-tabpanel-section align-half js-observer">
             <br />
-
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
                 같은 반 또는 학년 학생들의<br class="view-only-moblie" />
