--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </article>
 
           <!-- 1-4 -->
-          <article class="home-tabpanel-section align-half background js-observer" style="background-color: var(--gray900)">
+          <article class="home-tabpanel-section align-half background js-observer" style="background: url('public/images/tabpanel1-section4-bg.png') repeat 0 0">
             <div class="home-tabpanel-section-inner">
               <h1 class="home-tabpanel-section-title">
                 마음에 드는 문제를<br />
@@ -596,7 +596,7 @@
                 <span class="linebreak-desktop">또한 클릭 한 번으로 학생과 학부모에게 문자로 아이디를 바로 전송할 수 있어요.</span>
               </p>
               <figure class="home-tabpanel-section-media tabpanel4-1-wrap">
-                <img class="tabpanel4-1-1" src="public/images/tabpanel4-section1-1.png" alt="" />
+                <img class="tabpanel4-1-1 drop-shadow" src="public/images/tabpanel4-section1-1.png" alt="" />
 
                 <picture class="tabpanel4-1-2">
                   <source media="(max-width: 1200px)" srcset="public/images/tabpanel4-section1-2-mobile.png" />
